--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,5 +1,6 @@
 <footer class="footer bg-white">
-
+<div>
+</div>
 </footer>
 <script src="//cdn.bootcss.com/jquery/2.2.2/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.js"></script>
