--- a/statics/css/ityet_pc.css
+++ b/statics/css/ityet_pc.css
@@ -179,7 +179,7 @@ li{
 	height: 100%;
 	background-color: #efefef;
 	/* 官网首页页面背景图片 */
-	background-image: url(../img/shouye.jpg);
+	background-image: url(../img/shouye5.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
