--- a/statics/css/ityet_pc.css
+++ b/statics/css/ityet_pc.css
@@ -1166,3 +1166,21 @@ li{
 	color: #535353;
 	margin: 30px 0px;
 }
+
+.iframe-container {
+	position: relative;
+	width: 100%; /* 或者您想要的任何固定宽度 */
+	padding-top: 56.25%; /* 16:9 Aspect Ratio */
+	/* 为了兼容不支持padding-top的浏览器，可以设置一个最小高度 */
+	min-height: 300px;
+}
+
+.iframe-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: none; /* 如果您不想要边框 */
+}
+
