--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,8 +2,8 @@
 <div>
 </div>
 </footer>
-<script src="//cdn.bootcss.com/jquery/2.2.2/jquery.min.js"></script>
-<script src="//cdn.bootcss.com/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.js"></script>
+<script src="/statics/js/jquery-3.2.1.min.js"></script>
+<script src="/statics/js/bootstrap3-typeahead.min.js"></script>
 <script src="/search/js/cb-search.js"></script>
 <script>
 $(function () {
