--- a/statics/css/ityet_mp.css
+++ b/statics/css/ityet_mp.css
@@ -675,3 +675,19 @@ a{
 	right: 0;
 	margin: auto;
 }
+
+.mp-iframe-container {
+	position: relative;
+	width: 100%; /* 或者您想要的任何固定宽度 */
+	padding-top: 56.25%; /* 16:9 Aspect Ratio */
+	min-height: 1000px;
+}
+
+.mp-iframe-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: none; /* 如果您不想要边框 */
+}
